# mlektic

./: .gitignore  README.md  linear_regression_model.json  logistic_regression_model.json  pyproject.toml  setup.py  test.ipynb
mlektic/linear_reg/: linear_regression_archt.py
mlektic/logistic_reg/: logistic_regression_archt.py
mlektic/plot_utils/: plot_utils.py
tests/linear_reg/: test_linear_regression_archt.py  test_linreg_utils.py
tests/logistic_reg/: test_logistic_regression_archt.py  test_logreg_utils.py
tests/methods/: test_optimizer_archt.py  test_regularizer_archt.py
tests/methods/base/: test_regularizers.py
tests/plot_utils/: test_plot_utils.py
tests/preprocessing/: test_dataframes_utils.py
