[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlektic"
version = "0.0.1"
description = "A python machine learning library to use and visualize gradient descent for linear regression and logistic regression optimization."
authors = [
    { name="Daniel Antonio García Escobar", email="contacto@dialektico.com"},
]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.2.2",
    "polars>=1.4.1",
    "scikit_learn>=1.3.0",
    "tensorflow>=2.17.0",
    "tensorflow_intel>=2.17.0",
    "matplotlib>=3.9.0",
    "ipython>=8.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "setuptools>=72.1.0"
]

[project.urls]
homepage = "https://github.com/DanielDialektico/mlektic"

[project.classifiers]
Programming Language :: Python :: 3.11
License :: OSI Approved :: Apache Software License
Operating System :: OS Independent

[project.requires-python]
>=3.11